# HydraMind_eMarket

./: .gitignore  Makefile  README.md  docker-compose.yml  generation.py  prepare.sh
AuthService/: Dockerfile  Makefile  (+1 more)
AuthorizationService/: Dockerfile  Makefile  dockerfile  pyproject.toml  requirements.txt
AuthorizationService/app/application/api/: main.py
AuthorizationService/app/application/api/dependencies/: user.py
AuthorizationService/app/domain/entities/: user.py  users.py
AuthorizationService/app/domain/events/: base.py  user.py  users.py
AuthorizationService/app/domain/exceptions/: email.py  login.py  role.py
AuthorizationService/app/domain/values/: base.py  email.py  login.py  password.py  role.py
AuthorizationService/app/infrastructure/repositories/: user.py
AuthorizationService/app/logic/: init.py  mediator.py
AuthorizationService/app/logic/commands/: base.py  user.py
AuthorizationService/app/logic/events/: base.py
AuthorizationService/app/logic/exceptions/: base.py  mediator.py  user.py
AuthorizationService/app/tests/: conftest.py  fixtures.py
AuthorizationService/app/tests/logic/: conftest.py  test_users.py
AuthorizationService/application/api/: main.py
AuthorizationService/common/: settings.py
AuthorizationService/docker_compose/: app.yaml
AuthorizationService/domain/entities/: base.py  users.py
AuthorizationService/domain/exceptions/: base.py  email.py  login.py  password.py
AuthorizationService/domain/values/: __init__.py  base.py  email.py  login.py  password.py
AuthorizationService/tests/domain/values/: test_user.py
GUI/: Makefile  pyproject.toml
GUI/app/: main.py
GUI/app/pages/: admin.py  auth_page.py  catalog.py  notifications.py  salesman.py  user_page.py
GUI/app/settings/: config.py
GUI/docker-compose/: .env.example  app.yaml
GateWay/: Makefile  pyproject.toml
GateWay/app/settings/: config.py
GateWay/docker-compose/: .env.example  app.yaml
(+436 files in other folders)
