[tool.poetry]
name = "gateway"
version = "0.1.0"
description = ""
authors = ["JonAJ <jonajmail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"
streamlit = "^1.41.0"
django-environ = "^0.11.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
